# webgallery

./: .gitignore  README.md  live-tracker.md  pyproject.toml  requirements.txt
agents/: agent-wpd-secure-thumbnail-serving.md  agent-wpe-optimize-enrich-index.md  agent-wpf-build-gallery-discovery-ui.md  agent-wpg-finish-rating-snapshot-contract.md  agent-wph-harden-gallery-interactions.md  agent-wpi-verify-gallery-upgrades.md  agent-wpj-define-publication-contract.md  agent-wpk-implement-gallery-publication.md  agent-wpl-verify-publication-workflow.md
docs/: CONTENT_RATING.md  GALLERY_INDEX_PUBLICATION.md  GALLERY_ROADMAP.md  INDEX_LIBRARY.md  campaign-plan-002-secure-and-improve-the.md  campaign-plan-003-harden-the-wallpaper-gallery.md  campaign-plan-004-package-a-fail-closed.md  discovery-gallery-publication-audit.md  discovery-gallery-sorting-presentation.md  discovery-gallery-upgrade-review.md  discovery-picture-category-navigation.md  discovery-sorting-tag-pipeline.md
reports/: README_live_dashboard.md  _build_dashboard.py  _render_dashboard.py  dashboard_server.py  library-browser.html  watch_dashboard.ps1
schemas/: gallery-publication-manifest.schema.json  wallpaper-metadata.schema.json
scripts/: Invoke-GalleryIndexPublication.ps1  publish_gallery_index.py
tests/: test_content_rating.py  test_dashboard_server.py  test_gallery_browser_contract.py  test_gallery_publication.py  test_gallery_publication_contract.py  test_gallery_publication_recovery.py  test_gallery_thumbnails.py  test_index_library.py  test_library_browser.py  test_library_transfer.py  (+1 more)
(+14 files in other folders)
