[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webgallery"
version = "0.1.0"
description = "A secure, thumbnail-first local wallpaper gallery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
webgallery-index = "dl_engine.index_library:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
